versioned_docs/version-1.0.0/intro.mdx
---
id: introduction
title: Introduction
hide_title: true
hide_table_of_contents: false
sidebar_label: Introduction
sidebar_position: 1
pagination_label: Introduction
description: What is this app? 
keywords:
  - introduction
slug: /intro
last_update:
  author: hashinami
---

<h1 style={{textAlign: "center", fontWeight: "bold"}}>Hashinami CLI</h1>

<div align="center">
  <img style={{marginRight: "5px", marginLeft: "5px"}} src="https://img.shields.io/npm/v/hashinami-cli?logo=npm&logoColor=cb3837" alt="npm version" />
  <img style={{marginRight: "5px", marginLeft: "5px"}} src="https://img.shields.io/npm/dw/hashinami-cli?logo=npm&logoColor=cb3837" alt="npm download total" />
  <img style={{marginRight: "5px", marginLeft: "5px"}} src="https://github.com/hashinami46/hashinami-cli/actions/workflows/npm-publish.yml/badge.svg" alt="github build status" />
</div>

## 🚀 Description
⚡ Improved version of sakamichi-app-ts-cli. A cli tool to download various assets from Sakamichi Apps and Games.
It's still under development and I'll add some features to download assets from other apps later.

## 🔥 Motivation
Collecting every cuteness from my oshi. I also want to provide an archive for myself. 
So, if my oshi is graduating, I can still see their cute pictures on my disk.

## 📚 Features
- Download images, videos, and other assets from Sakamichi Apps and Games.
- Automatic sorting and organizing downloaded assets.
- Support for multiple apps with future updates.
- Multiple language support.

## 📸 Sample
<video width="350px" controls>
  <source src={require("@site/static/vid/sample-vid-01.mp4").default} type="video/mp4" />
</video>

## 🪵 Changelog
v1.0.0
```
• First commit
```

## ❓ FAQ
* Q: How to get `refresh_token`?  
  A: Please check [this](/docs/setup) or [this](https://github.com/proshunsuke/colmsg/blob/main/doc%2Fhow_to_get_refresh_token.md)!

## ⭐ Credits
- [Colmsg](https://github.com/proshunsuke/colmsg)
- And all my friends that helps me to maintain and find the issues.

## ©️ License
This application is provided as open source and is offered as-is. The author is not responsible for any damages caused by this application. By using this application, users agree to assume any risks associated with its use.\
This application is provided under the MIT License.

Please be aware of the following items in Article 8 (Prohibited Activities) of the App's Terms of Use:
- (16) Acts of accessing or attempting to access this service by means other than those specified by the company
- (17) Acts of accessing or attempting to access this service using automated methods (including crawlers and similar technologies)